# NodeGet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.github.bak/ISSUE_TEMPLATE/: bug.yaml
.github.bak/actions/setup-rust/: action.yml
.github.bak/workflows/: release.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: agent-build.yml  ci.yml  release-server.yml  release.yml  release.yml.bak  server-build.yml
agent/: Cargo.toml  build.rs  config.toml.example  getrandom_shim.c
agent/src/: config_access.rs  dry_run.rs  main.rs  ntp.rs
agent/src/monitoring/: gpu.rs  impls.rs  mod.rs
agent/src/monitoring/network_connections/: mod.rs  netlink.rs
agent/src/monitoring/system_impls/: mod.rs  process.rs  virtualization_detect.rs
agent/src/rpc/: mod.rs  monitoring_data_report.rs  multi_server.rs
agent/src/tasks/: dns.rs  execute.rs  http_request.rs  ip.rs  mod.rs  pty.rs  self_update.rs
agent/src/tasks/ping/: http.rs  icmp.rs  mod.rs  tcp.rs
crates/ng-config/: Cargo.toml
crates/ng-config/src/: lib.rs  server_rpc.rs
crates/ng-config/src/args_parse/: agent.rs  mod.rs  server.rs
crates/ng-config/src/config/: agent.rs  mod.rs  server.rs
crates/ng-core/: Cargo.toml
crates/ng-core/src/: error.rs  lib.rs  self_update.rs
crates/ng-core/src/js_result/: mod.rs  query.rs
crates/ng-core/src/monitoring/: mod.rs  query.rs
crates/ng-core/src/permission/: create.rs  data_structure.rs  mod.rs  permission_checker.rs  token_auth.rs
crates/ng-core/src/utils/: error_message.rs  mod.rs  server_json.rs  uuid.rs  version.rs
crates/ng-crontab/: Cargo.toml
crates/ng-crontab/src/: cache.rs  cron_type.rs  lib.rs  query.rs  result.rs  server_cron.rs  task.rs
crates/ng-crontab/src/rpc/: mod.rs
crates/ng-crontab/src/rpc/crontab/: auth.rs  create.rs  delete.rs  edit.rs  get.rs  mod.rs  set_enable.rs
crates/ng-crontab/src/rpc/crontab_result/: auth.rs  delete.rs  mod.rs  query.rs
crates/ng-db/src/: db_connection.rs  db_registry.rs  lib.rs
crates/ng-infra/: Cargo.toml
crates/ng-infra/src/: dispatcher.rs  lib.rs  permission.rs  server.rs
crates/ng-js-runtime/: Cargo.toml
crates/ng-js-runtime/src/: inline_call.rs  js_worker_service.rs  lib.rs  nodeget.rs  runtime_pool.rs  server_runtime.rs  spawn_on_server_runtime.rs  types.rs
crates/ng-js-worker/: Cargo.toml
crates/ng-js-worker/src/: auth.rs  lib.rs  service.rs
crates/ng-js-worker/src/js_result/: delete.rs  mod.rs  query.rs
crates/ng-js-worker/src/js_worker/: auth.rs  create.rs  delete.rs  get_rt_pool.rs  list_all_js_worker.rs  mod.rs  read.rs  route_name.rs  run.rs  update.rs
crates/ng-kv/: Cargo.toml
crates/ng-kv/src/: auth.rs  db.rs  kv.rs  lib.rs
crates/ng-kv/src/rpc/: create.rs  delete_key.rs  delete_namespace.rs  get_all_keys.rs  get_multi_value.rs  get_value.rs  list_all_namespace.rs  mod.rs  set_value.rs
crates/ng-monitoring/: Cargo.toml
crates/ng-monitoring/src/: data_structure.rs  lib.rs  monitoring_buffer.rs  monitoring_last_cache.rs  monitoring_uuid_cache.rs  query.rs  static_hash_cache.rs
crates/ng-monitoring/src/rpc/: mod.rs
crates/ng-monitoring/src/rpc/agent/: delete_common.rs  delete_dynamic.rs  delete_dynamic_summary.rs  delete_static.rs  mod.rs  query_dynamic.rs  query_dynamic_multi_last.rs  query_dynamic_summary.rs  query_dynamic_summary_multi_last.rs  query_static.rs  query_static_multi_last.rs  report_dynamic.rs  report_dynamic_summary.rs  report_static.rs
crates/ng-monitoring/src/rpc/agent_uuid/: delete.rs  list_all.rs  list_all_with_agent_mode.rs  mod.rs
crates/ng-monitoring/src/rpc/nodeget/: list_all_agent_uuid.rs  mod.rs
crates/ng-static/: Cargo.toml
crates/ng-static/src/: auth.rs  cache.rs  lib.rs  ops.rs  router.rs
crates/ng-static/src/rpc/: mod.rs
crates/ng-static/src/rpc/static_bucket/: auth.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
crates/ng-static/src/rpc/static_bucket_file/: auth.rs  delete_file.rs  list_file.rs  mod.rs  read_file.rs  rename_file.rs  upload_file.rs
crates/ng-task/: Cargo.toml
crates/ng-task/src/: lib.rs
crates/ng-task/src/rpc/: create_task.rs  create_task_blocking.rs  delete.rs  mod.rs  query.rs  upload_task_result.rs
crates/ng-task/src/types/: mod.rs  query.rs
crates/ng-terminal/: Cargo.toml
crates/ng-terminal/src/: auth.rs  check_agent.rs  lib.rs  terminal.rs
crates/ng-token/: Cargo.toml
crates/ng-token/src/: auth_checker_impl.rs  cache.rs  generate_token.rs  get.rs  lib.rs  super_token.rs
crates/ng-token/src/rpc/: change_password.rs  create.rs  delete.rs  edit.rs  get.rs  list_all_tokens.rs  mod.rs  roll_token_secret.rs  utils.rs
docker/: docker-compose.postgres.yml  docker-compose.sqlite.yml  entrypoint.sh
docs/.vitepress/: dev-sidebar-zh.config.js  theme-zh.config.js
docs/api/: errors.md  framework.md
docs/api/agent_uuid/: crud.md  index.md
docs/api/crontab/: crud.md
docs/api/crontab_result/: crud.md  index.md
docs/api/db/: crud.md  index.md
nodeget-lib/: Cargo.toml
nodeget-lib/src/: self_update.rs
nodeget-lib/src/permission/: data_structure.rs
server/: Cargo.toml
server/src/: main.rs  monitoring_last_cache.rs  monitoring_uuid_cache.rs  rpc_nodeget.rs  rpc_timing.rs
server/src/cache/: mod.rs
server/src/crontab/: cache.rs  mod.rs
server/src/js_runtime/: mod.rs
server/src/logging/: mod.rs
server/src/rpc/agent/: delete_common.rs  query_dynamic.rs  query_dynamic_multi_last.rs  query_dynamic_summary.rs  query_dynamic_summary_multi_last.rs  query_static.rs  query_static_multi_last.rs  report_dynamic_summary.rs  report_static.rs
server/src/rpc/agent_uuid/: list_all.rs  list_all_with_agent_mode.rs
server/src/rpc/crontab_result/: query.rs
server/src/rpc/js_result/: query.rs
server/src/rpc/nodeget/: exec_sql.rs  list_all_agent_uuid.rs  mod.rs
server/src/rpc/task/: delete.rs  query.rs
server/src/rpc/token/: list_all_tokens.rs
server/src/static_file/: cache.rs  mod.rs
server/src/subcommands/: get_uuid.rs  init.rs  mod.rs  roll_super_token.rs  serve.rs
server/src/token/: cache.rs  get.rs  mod.rs  super_token.rs
(+52 files in other folders)
