[package]
name = "nodeget-server"
version = "0.4.1"
edition = "2024"
description = "Next-generation server monitoring and management tools"
license = "AGPL-3"
readme = "../README.md"
repository = "https://github.com/NodeSeekDev/NodeGet"
categories = ["asynchronous", "command-line-utilities", "network-programming", "os"]

[dependencies]
# 本地
nodeget-lib = { path = "../nodeget-lib", features = ["for-server"] }
migration = { path = "migration" }

# 基础运行时
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
chrono = { version = "0.4.43", default-features = false, features = ["now", "std"] }
uuid = { version = "1.19.0", default-features = false, features = ["v4"] }
futures-util = "0.3.31"
sha2 = "0.11.0"
subtle = "2.6.1"
hex = "0.4.3"
base64 = "0.22.1"
cron = "0.16.0"
anyhow = "1.0.100"

# 数据库
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "macros", "with-json", "with-uuid"] }

# Server
#jsonrpsee = { version = "0.26.0", default-features = false, features = ["server", "macros"] }
jsonrpsee = { git = "https://github.com/infinitefield/jsonrpsee.git", default-features = false, features = ["server", "macros"] }
axum = { version = "0.8.8", default-features = false, features = ["tokio", "ws", "http1", "query"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
tower = { version = "0.5.3", default-features = false }

# 解析
serde = "1.0.228"
serde_json = "1.0.149"
toml = { version = "1.1.2", default-features = false, features = ["std", "serde", "parse"] }

# HTTP Client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# WebDAV
dav-server = { version = "0.11.0", default-features = false, features = ["localfs"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono", "tracing-log"] }

# JS Runtime
rquickjs = { version = "0.11", git = "https://github.com/delskayn/rquickjs.git", default-features = false, features = ["futures"] }
llrt_fetch = { git = "https://github.com/awslabs/llrt.git", default-features = false, features = ["http1", "compression-rust", "webpki-roots", "tls-ring"] }
llrt_buffer = { git = "https://github.com/awslabs/llrt.git", default-features = false }
llrt_timers = { git = "https://github.com/awslabs/llrt.git", default-features = false }
llrt_url = { git = "https://github.com/awslabs/llrt.git", default-features = false }
llrt_stream_web = { git = "https://github.com/awslabs/llrt.git", default-features = false }
llrt_util = { git = "https://github.com/awslabs/llrt.git", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
rquickjs = { version = "0.11", git = "https://github.com/delskayn/rquickjs.git", default-features = false, features = ["futures", "bindgen"] }

[features]
default = []

