[package]
name = "nodeget-server"
version.workspace = true
edition.workspace = true
description = "Next-generation server monitoring and management tools"
license = "AGPL-3"
readme = "../README.md"
repository = "https://github.com/NodeSeekDev/NodeGet"
categories = ["asynchronous", "command-line-utilities", "network-programming", "os"]

[dependencies]
# ng-* 内部 crate（server feature）
ng-core = { workspace = true, features = ["for-server"] }
ng-db = { workspace = true, features = ["server"] }
ng-config = { workspace = true, features = ["server"] }
ng-token = { workspace = true, features = ["server"] }
ng-kv = { workspace = true, features = ["server"] }
ng-task = { workspace = true, features = ["server"] }
ng-monitoring = { workspace = true, features = ["server"] }
ng-static = { workspace = true, features = ["server"] }
ng-js-runtime = { workspace = true, features = ["server"] }
ng-js-worker = { workspace = true, features = ["server"] }
ng-crontab = { workspace = true, features = ["server"] }
ng-terminal = { workspace = true, features = ["server"] }

# 基础运行时
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

# 数据库
sea-orm = { workspace = true }

# Server
jsonrpsee = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
tower = { workspace = true }

# 解析
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# JS Worker 路由处理
base64 = { workspace = true }

[features]
default = []
