[package]
name = "ng-infra"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
server = ["dep:jsonrpsee", "dep:sea-orm", "dep:serde_json", "dep:ng-db"]

[dependencies]
ng-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

# server feature only
jsonrpsee = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
ng-db = { workspace = true, optional = true }
