[package]
name = "ng-kv"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
server = [
    "dep:ng-infra",
    "dep:ng-db",
    "dep:anyhow",
    "dep:sea-orm",
    "dep:jsonrpsee",
    "dep:tracing",
    "ng-core/for-server",
    "ng-infra/server",
    "ng-db/server",
]

[dependencies]
ng-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# server feature dependencies
ng-infra = { workspace = true, optional = true }
ng-db = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true, default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "macros"] }
jsonrpsee = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
