[package]
name = "ng-static"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
server = [
    "dep:ng-infra",
    "dep:ng-db",
    "dep:anyhow",
    "dep:sea-orm",
    "dep:serde_json",
    "dep:jsonrpsee",
    "dep:tracing",
    "dep:tokio",
    "dep:base64",
    "dep:axum",
    "dep:dav-server",
    "dep:ng-config",
    "ng-infra/server",
    "ng-db/server",
]

[dependencies]
ng-core = { workspace = true }
serde = { workspace = true }

# server feature dependencies
ng-infra = { workspace = true, optional = true }
ng-db = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true, default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "macros"] }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
dav-server = { workspace = true, optional = true }
ng-config = { workspace = true, optional = true }
