[package]
name = "ng-terminal"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
server = [
    "dep:ng-db",
    "dep:ng-infra",
    "dep:ng-task",
    "dep:axum",
    "dep:futures-util",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:anyhow",
    "dep:tracing",
    "dep:sea-orm",
    "dep:uuid",
    "ng-core/for-server",
    "ng-db/server",
    "ng-infra/server",
    "ng-task/server",
]

[dependencies]
ng-core = { workspace = true }

# server feature dependencies
ng-db = { workspace = true, optional = true }
ng-infra = { workspace = true, optional = true }
ng-task = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true, default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "macros"] }
uuid = { workspace = true, optional = true, default-features = false, features = ["std", "serde", "v4", "v5", "fast-rng"] }
