[package]
name = "ng-token"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
server = ["dep:ng-infra", "dep:ng-db", "dep:jsonrpsee", "dep:sea-orm", "dep:serde_json", "dep:sha2", "dep:hex", "dep:subtle", "dep:tracing", "dep:tokio", "ng-infra/server", "ng-db/server"]

[dependencies]
ng-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

# server feature only
ng-infra = { workspace = true, optional = true }
ng-db = { workspace = true, optional = true }
jsonrpsee = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
